# stratified-packager

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  justfile  pyproject.toml
.github/: labeler.yml  renovate.json  zizmor.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  config.yml
.github/workflows/: auto-labeler.yml  documentation.yml  linting.yml  publishing.yml  testing.yml  update-dependencies.yml
docs/: conf.py  index.md
docs/_static/: custom.css
docs/api/: index.rst
docs/development/: contribute.md  documentation.md  environment.md  packaging.md  spec.md  testing.md  translation.md
docs/usage/: algorithm.md  installation.md  settings.md
scripts/: __init__.py  build_qgis_repo_xml.py  customize_qgis_pth.py  pylupdate.py  setup_env_vars.py  update_metadata.py  venv_setup.ps1
stratified_packager/: __about__.py  __init__.py  identity.py  main.py  metadata.txt  settings.py
stratified_packager/gui/: __init__.py  dlg_layers_table.py  dlg_layers_table.ui  wdg_layer_options_page.py  wdg_layer_options_page.ui  wdg_plugin_options_page.py  wdg_plugin_options_page.ui  wdg_project_options_page.py  wdg_project_options_page.ui  widgets.py
stratified_packager/processing/: __init__.py  algorithm.py  building.py  bundling.py  dedup.py  matching.py  material.py  params.py  project_builder.py  provider.py  report.py  reporting.py  staging.py  strata.py  virtual.py  workers.py
stratified_packager/resources/i18n/: stratified_packager_en.ts  stratified_packager_es.ts  stratified_packager_pt.ts
stratified_packager/toolbelt/: __init__.py  debugging.py  gpkg.py  i18n.py  logging.py  logging_records.py  mapping_proxy.py  relations.py  settings.py  sql.py  utils.py  zipping.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_qgis_process_cli.py
tests/fixtures/e2e/: details.geojsonl  points.geojsonl  project.qgs  strata.geojsonl
tests/scripts/: __init__.py  test_build_qgis_repo_xml.py  test_customize_qgis_pth.py  test_pylupdate.py  test_setup_env_vars.py  test_update_metadata.py
tests/stratified_packager/: __init__.py  _qgis_helpers.py  test___about__.py  test___init__.py  test_identity.py  test_main.py  test_settings.py
tests/stratified_packager/gui/: __init__.py  test_dlg_layers_table.py  test_wdg_layer_options_page.py  test_wdg_plugin_options_page.py  test_wdg_project_options_page.py  test_widgets.py
tests/stratified_packager/processing/: __init__.py  test_algorithm.py  test_building.py  test_bundling.py  test_dedup.py  test_matching.py  test_material.py  test_params.py  test_project_builder.py  test_provider.py  test_report.py  test_reporting.py  test_staging.py  test_strata.py  test_virtual.py  test_workers.py
tests/stratified_packager/toolbelt/: __init__.py  _conversion_samples.py  _unicode_blocks.py  test_debugging.py  test_gpkg.py  test_i18n.py  test_logging.py  test_logging_records.py  test_mapping_proxy.py  test_relations.py  test_settings.py  test_sql.py  test_utils.py  test_zipping.py
